# QCNN_project

./: .env.example  .gitignore  .pre-commit-config.yaml  FUTURE.md  README.md  colab.ipynb  main.py  pyproject.toml  train_ae_full.py
Experiment/: benchmark.py  experiment_template.py  main_full.py  main_qea.py  main_qiskit.py  main_small.py  run_baseline.py
QCNN/: DataManager.py  Evaluation.py  QCNN_structure.py  QEA_core.py  __init__.py  utils.py
QEAQCNN/: Evaluation.py  __init__.py  utils.py
config/: config.yaml  fashionmnist_02_ae.yaml  fashionmnist_02_ae_qea.yaml  fashionmnist_02_pca.yaml  fashionmnist_0_vs_246.yaml  fashionmnist_hybrid_e2e.yaml  mnist_38_ae.yaml  mnist_38_pca.yaml  mnist_69_ae.yaml  mnist_69_pca.yaml
config/dataset/: cifar10.yaml  fashionmnist.yaml  mnist.yaml  mnist_dct.yaml  mnist_pca.yaml  mnist_resize.yaml  synthetic.yaml
config/engine/: hybrid.yaml  qiskit.yaml  torch_adam.yaml
config/evolution/: default.yaml
config/feature_map/: angle.yaml  pge.yaml  zz.yaml
config/preset/: debug.yaml  production.yaml
config/strategy/: hybrid.yaml  qiskit.yaml
config/task/: auto_evolution.yaml  evolution.yaml  train.yaml
data/: __init__.py  config.py  datasets.py  preprocessors.py
output/None_angle_autoencoder16_20260212_114123/: None_angle_autoencoder16_20260212_114123_results.json
output/None_angle_autoencoder16_20260212_114530/: None_angle_autoencoder16_20260212_114530_results.json
qcnn_shared/: __init__.py  feature_maps.py
qiskitQCNN/: DataManager.py  Evaluation.py  __init__.py  main.py  qiskitQCNN_structure.py  trainer.py
(+154 files in other folders)
